# report-check-tool-2026

./: .gitignore  README.md
backend/: pyproject.toml
backend/app/: config.py  main.py
backend/app/models/: report_self_check.py
backend/app/routers/: report_self_check.py
backend/app/schemas/: codex_check_result.schema.json
backend/app/services/: codex_judge_client.py  pdf_document_loader.py  ptr_report_check_service.py  ptr_report_evidence_builder.py  record_report_check_service.py  record_report_evidence_builder.py  report_evidence_builder.py  report_self_check_service.py
backend/tests/: conftest.py  test_codex_judge_client.py  test_pdf_document_loader.py  test_ptr_report_check_api.py  test_ptr_report_check_service.py  test_ptr_report_evidence_builder.py  test_record_report_check_api.py  test_record_report_check_service.py  test_record_report_evidence_builder.py  test_report_evidence_builder.py  test_report_self_check_api.py  test_report_self_check_models.py  test_report_self_check_service.py
backend/tests/fixtures/: codex_c02_pass.json  codex_c12_error.json  minimal_report_pages.json
docs/superpowers/plans/: 2026-04-23-report-self-check-codex-judge.md
docs/superpowers/specs/: 2026-04-23-report-self-check-codex-judge-spec.md
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  styles.css
frontend/src/api/: reportSelfCheck.ts
frontend/src/export/: reportPdfExport.ts
frontend/src/pages/: ReportSelfCheckPage.tsx
frontend/src/types/: reportSelfCheck.ts
frontend/tests/: reportPdfExport.test.mjs
(+5 files in other folders)
